Changed AVM to work with JDK8 instead of JDK10
-this is required since Laminar uses Java8
-this required mostly disabling tests which specifically check for sizing/billing details related to the JDK10 API shape
-any uses of StringConcatMetaFactory were also disabled as that was added later
-lib/aion-types-22a3be9.jar rebuilt as Java8
-lib/ed25519.jar rebuilt as Java8 from https://github.com/str4d/ed25519-java commit e0ac35769db8553fb714b09f0d3f3d2b001fd033
-this change may be re-interpretted to decompose it, later, but this is just to sprint to the point where some Laminar implementation can work